--- a/css/style.css
+++ b/css/style.css
@@ -25,59 +25,109 @@
 
 body{
     font-family: verdana;
+    background-color: #0FA7FF;
+    color: #FFFFFF;
 }
 
+h1{
+    background-color: #000055;
+    padding: 10px;
+}
+
+h2{
+    border: 1px solid white;
+    padding: 10px;
+}
+
+#submit {
+    color: #FFFFFF;
+    cursor: pointer;
+    padding: 5px;
+    margin: 0 0px 0px 0;
+    background: #0FA7FF;
+    border: 1px solid white;
+}
+
+#submit:hover {
+    background: #ff8c00;
+}
+
+a {
+	color: #50EBEC;
+	font-size: 80%;
+}
+
+
 form.index {
-	border: 1px solid black;
-	background-color: #cccccc;
 	margin: 10px;
 	padding: 10px;
  }
  
  div.index {
- 	border: 1px solid white;
- 	background-color: #eeeeee;
  	margin: 3px;
  	padding: 3px;
  }
 
+
+
 form.admin {
-	border: 1px solid black;
-	background-color: #cccccc;
+	border: 1px solid white;
 	margin: 10px;
 	padding: 10px;
  }
  
  div.admin {
- 	border: 1px solid white;
- 	background-color: #eeeeee;
- 	margin: 3px;
- 	padding: 3px;
+     //background: #FFFFFF;
+     //color: #000000;
  }
  
+table.admin {
+    border: 0px solid white;
+}
 
-table.admin, tr.admin, td.admin {
-    border: 1px solid black;
+tr.admin, td.admin {
+    border: 1px solid white;
+    text-align: center;
+    font-size: 80%;
 } 
 
+
+
 form.add {
- 	border: 1px solid black;
- 	background-color: #cccccc;
+ 	border: 1px solid white;
  	margin: 10px;
  	padding: 10px;	 
  }
  
  div.add {
-  	border: 1px solid white;
-  	background-color: #eeeeee;
-  	margin: 3px;
-  	padding: 3px;	 
+	 
  }
  
- table.credits, tr.credits, td.credits {
-    border: 1px solid black;
+ 
+ 
+ form.del {
+  	border: 1px solid white;
+  	margin: 10px;
+  	padding: 10px;	 
+  }
+  
+  div.del {
+ 	 
+ }
+ 
+ table.credits {
+    border: 1px solid white;
+}
+
+ th.credits {
+    border: 0px solid white;
     text-align: center;
-    background-color: #cccccc;
-    float: center;
+} 
+
+ tr.credits, td.credits {
+    border: 1px solid white;
+    text-align: center;
+    margin: 10px;
+    padding: 10px;
 } 
 
